# scene-analyzer

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION-PLAN.md  Makefile  NEUE_FEATURES.md  PHASE1-SETUP.md  PHASE2-BACKEND-CORE.md  PHASE3-AI-INTEGRATION.md  PROMPT_IMPROVEMENTS.md  RAILWAY_DEPLOY.md  README.md  debug_pdf.py  debug_screenplay.py  debug_screenplay_pdf.py  docker-compose.yml  railway.toml  scene-analyzer.md  test_aronson_output.py  test_screenplay.txt
00_infos/: architecture.md  grand-plan.md  llm-context.md  patterns.md
88_input/testdata/: sample.fountain
90_reports/: changes.md  coverage.md  test-report.md
backend/: Dockerfile  coverage.xml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/analyzer/: __init__.py  openrouter_client.py  scene_analyzer.py
backend/app/api/: __init__.py  scripts.py
backend/app/excel/: __init__.py  generator.py
backend/app/models/: __init__.py  api.py  scene.py  schemas.py
backend/app/parsers/: __init__.py  base.py  base_parser.py  docx_parser.py  exceptions.py  fdx_parser.py  fountain_parser.py  pdf_parser.py  registry.py  txt_parser.py
backend/app/services/: __init__.py  ai_analyzer.py  script_service.py
backend/tests/: conftest.py  test_fdx_parser.py  test_fountain_parser.py  test_pdf_parser.py  test_scripts_api.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: Dockerfile  astro.config.mjs  nginx.conf  package.json  tsconfig.json
frontend/static/: app.js  index.html
tests/: e2e-test.js  package-lock.json  package.json  test_tatort_crime.py
